@@ -40,7 +40,7 @@ import java.util.List;
  */
 public class BatchCreateHelper
 {
-  public static <K, V extends RecordTemplate> List<CreateIdStatus<K>> batchCreate(RestClient restClient, RootBuilderWrapper<K, V>  builders, List<V> entities)
+  public static <K, V extends RecordTemplate> List<CreateIdStatus<K>> batchCreate(RestClient restClient, RootBuilderWrapper<K, V>  builders, List<V> entities, boolean addParams)
     throws RemoteInvocationException
   {
     RootBuilderWrapper.MethodBuilderWrapper<K, V, CollectionResponse<CreateStatus>> batchCreateWrapper = builders.batchCreate();
@@ -49,12 +49,20 @@ public class BatchCreateHelper
       Object obj = batchCreateWrapper.getBuilder();
       @SuppressWarnings("unchecked")
       BatchCreateIdRequestBuilder<K, V> builder = (BatchCreateIdRequestBuilder<K, V>) obj;
+      if (addParams) {
+        builder.addParam("useless", "param");
+        builder.addParam("foo", 2);
+      }
       return batchCreateNewBuilders(restClient, builder, entities);
     }
     else
     {
       @SuppressWarnings("unchecked")
       BatchCreateRequestBuilder<K, V> builder = (BatchCreateRequestBuilder<K, V>) batchCreateWrapper.getBuilder();
+      if (addParams) {
+        builder.addParam("useless", "param");
+        builder.addParam("foo", 2);
+      }
       return batchCreateOldBuilders(restClient, builder, entities);
     }
   }
